--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,9 +1,20 @@
+.pt-4 {
+    padding-top: 1.5rem !important;
+    margin-left: 15%;
+}
+
+.grid-padding {
+    padding: 0px;
+    margin-right: 2.75%;
+}
+
 footer {
-    width: 100%;
+
+    /*width: 100%;
     margin: 5% 0% 0% 0%;
     padding-top: 12%;
     padding-bottom: 1%;
-    background-color: black;
+    background-color: black;*/
 }
 
 .about {
