--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -2,7 +2,7 @@
 <footer class="page-footer font-small teal pt-4">
     <div class="container-fluid text-center text-md-left">
       <div class="row">
-        <div class="col-md-3 mt-md-0 mt-3 grid-padding">
+        <div class="col-md-3 mt-md-0 mt-3">
           <!-- Content -->
           <h2>LOCATION</h2>
           <p>Brasov 500066</p>
@@ -13,7 +13,7 @@
 
         <hr class="clearfix w-100 d-md-none pb-3">
 
-        <div class="col-md-3 mb-md-0 mb-3 grid-padding">
+        <div class="col-md-3 mb-md-0 mb-3">
           <!-- Content -->
           <h2>OPENING HOURS</h2>
           <p>LUNCH SERVICE</p>
@@ -22,21 +22,18 @@
           <p></p>
           <p>DINNER SERVICE</p>
           <p>Daily: Bookings from 3am – 6am</p>
-
         </div>
 
         <hr class="clearfix w-100 d-md-none pb-3">
 
-        <div class="col-md-3 mb-md-0 mb-3 grid-padding">
+        <div class="col-md-3 mb-md-0 mb-3">
           <!-- Content -->
-          <h2>OPENING HOURS</h2>
-          <p>LUNCH SERVICE</p>
-          <p>Friday, Saturday & Sunday:</p>
-          <p>Bookings from 12am – 1.30am</p>
-          <p></p>
-          <p>DINNER SERVICE</p>
-          <p>Daily: Bookings from 3am – 6am</p>
-
+          <h2>Follow us for more gruesome content</h2>
+          <div class="icons">
+            <i class="fab fa-twitter-square fa-2x"></i>
+            <i class="fab fa-facebook-square fa-2x"></i>
+            <i class="fab fa-instagram fa-2x"></i>
+          </div>
         </div>
       </div>
     </div>
