--- a/views/order.ejs
+++ b/views/order.ejs
@@ -18,6 +18,7 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Nosifer" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Jolly+Lodger|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Pirata+One|Roboto" rel="stylesheet">
 
       <!--CSS pages -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css"/>
