made all button styles consistent

--- a/styles/checkout.scss
+++ b/styles/checkout.scss
@@ -4,7 +4,8 @@
 
 .header h2 {
   font-size: 5rem;
-  color: white
+  color: white;
+  background-color: rgba(0,0,0,0.6);
 }
 
 .summary {
@@ -30,4 +31,21 @@ table > tfoot {
   padding: 2rem;
   background-color: rgba(0,0,0,0.6);
   color: #ffffff;
+}
+
+.btn-dark {
+  background-color: #8b8d6d;
+  color: black;
+  border-color: #4e4747;
+  box-shadow: 2px 2px #696969;
+}
+
+.btn-dark:hover {
+  color: #fff;
+  background-color: #23272b;
+  border-color: #1d2124;
+}
+
+.btn-dark:focus, .btn-dark.focus {
+  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
 }
