--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -44,6 +44,16 @@ button {
     box-shadow: 2px 2px #696969;
 }
 
+button:hover {
+  color: #fff;
+  background-color: #23272b;
+  border-color: #1d2124;
+}
+
+button:focus, button.focus {
+  box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+}
+
 span {
   display: none;
 }
