made headers visible on order page

--- a/views/order.ejs
+++ b/views/order.ejs
@@ -48,9 +48,9 @@
           <tr>
             <th class="hide">Name</th>
             <th class="hide">Price</th>
-            <th class="hide" width="10%">Minus</th>
+            <th class="hide" width="10%"></th>
             <th class="hide" width="10%">Quantity</th>
-            <th class="hide" width="10%">Plus</th>
+            <th class="hide" width="10%"></th>
           </tr>
         </thead>
         <tbody>
