--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,44 +1,47 @@
-<!-- Footer from mdbootstrap.com-->
-<footer class="page-footer font-small teal pt-4">
-    <div class="container-fluid text-center text-md-left">
-      <div class="row">
-        <div class="col-md-3 mt-md-0 mt-3">
-          <!-- Content -->
-          <h2>LOCATION</h2>
-          <p>Brasov 500066</p>
-          <p>Transylvania, Romania</p>
-          <p>phone: 514-622-0593</p>
-          <p>email: countessbathory@gmail.com</p>
-        </div>
+<footer id="contacts">
 
-        <hr class="clearfix w-100 d-md-none pb-3">
+				<div class="contact-box contact-us">
+					<div class="contact-us-content">
+            <h2>OPENING HOURS</h2>
+            <p>LUNCH SERVICE</p>
+            <p>Friday, Saturday & Sunday:</p>
+            <p>Bookings from 12am – 1:30am</p>
+            <p></p>
+            <p>DINNER SERVICE</p>
+            <p>Daily: Bookings from 3am – 6am</p>
+					</div>
+				</div>
 
-        <div class="col-md-3 mb-md-0 mb-3">
-          <!-- Content -->
-          <h2>OPENING HOURS</h2>
-          <p>LUNCH SERVICE</p>
-          <p>Friday, Saturday & Sunday:</p>
-          <p>Bookings from 12am – 1:30am</p>
-          <p></p>
-          <p>DINNER SERVICE</p>
-          <p>Daily: Bookings from 3am – 6am</p>
-        </div>
-
-        <hr class="clearfix w-100 d-md-none pb-3">
-
-        <div class="col-md-3 mb-md-0 mb-3">
-          <!-- Content -->
-          <h2>Follow us for more gruesome content</h2>
-          <div class="icons">
-            <i class="fab fa-twitter-square fa-2x"></i>
-            <i class="fab fa-facebook-square fa-2x"></i>
-            <i class="fab fa-instagram fa-2x"></i>
+				<div class="contact-box contact-information">
+					<div class="contact-address">
+						<div class="details">
+							<h2>LOCATION</h2>
+              <p>Brasov 500066</p>
+              <p>Transylvania, Romania</p>
+              <p>phone: 514-622-0593</p>
+              <p>email: countessbathory@gmail.com</p>
+              <p>Phone: (514) 622-0593</p>
+							<p>Fax: (666) 666-6666</p>
+						</div>
           </div>
         </div>
-      </div>
-    </div>
-  </footer>
-  <!-- Footer -->
+      
+      <div class="wrapper">
+          <div class="contact-section">
+            <div class="contact-box social-media">
+              <div class="social-media-content">
+                <div class="social-media-icons">
+                  <i class="fab fa-twitter-square fa-2x"></i>
+                  <i class="fab fa-facebook-square fa-2x"></i>
+                  <i class="fab fa-instagram fa-2x"></i>
+              </div>
+            </div>
+          </div>
+
+
+		</div>
+	</footer>
+
 
 
 
